# shared-actions

./: .coverage  .gitignore  .markdownlint-cli2.jsonc  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODEOWNERS  EXECPLAN_REVIEW_SUMMARY.md  Makefile  README.md  actions_common.py  bool_utils.py  cargo_utils.py  cmd_utils.py  cmd_utils.pyi  cmd_utils_importer.py  conftest.py  correlation_id.py  pyproject.toml  pytest.ini  shellstub.py  typos.local.toml  typos.toml
.github/: dependabot.yml
.github/actions/: DEVELOPMENT.md
.github/actions/create-test-artefacts/: action.yml
.github/actions/create-test-dist/: action.yml
.github/actions/determine-release-modes/: CHANGELOG.md  README.md  action.yml
.github/actions/ensure-cargo-version/: README.md  action.yml
.github/actions/export-cargo-metadata/: CHANGELOG.md  README.md  action.yml
.github/actions/generate-coverage/: CHANGELOG.md  README.md  action.yml
.github/actions/install-nfpm/: action.yml
.github/actions/install-nixie/: CHANGELOG.md  README.md  action.yml
.github/actions/install-whitaker/: CHANGELOG.md  README.md  action.yml
.github/actions/linux-packages/: CHANGELOG.md  README.md  action.yml
.github/actions/macos-package/: CHANGELOG.md  README.md  action.yml
.github/actions/ratchet-coverage/: CHANGELOG.md  README.md  action.yml
.github/actions/release-to-pypi-uv/: CHANGELOG.md  README.md  action.yml
.github/actions/resolve-workflow-source/: README.md  action.yml
.github/actions/rust-build-release/: CHANGELOG.md  README.md  action.yml
.github/actions/setup-rust/: CHANGELOG.md  README.md  action.yml
.github/actions/setup-windows-gnu/: README.md  action.yml
.github/actions/stage-release-artefacts/: CHANGELOG.md  README.md  action.yml
.github/actions/tests/: test_actions_common.py  test_correlation_id.py
.github/actions/upload-codescene-coverage/: CHANGELOG.md  README.md  action.yml
.github/actions/upload-release-assets/: CHANGELOG.md  README.md  action.yml
.github/actions/validate-linux-packages/: CHANGELOG.md  README.md  action.yml
.github/actions/windows-package/: CHANGELOG.md  README.md  action.yml
.github/export-postgres-url/: action.yml
.github/workflows/: ci.yml  coverage-main.yml  dependabot-automerge-caller.yml  dependabot-automerge.yml  mutation-cargo.yml  mutation-mutmut.yml  mutation-testing-caller.yml  rust-toy-app.yml  test-dependabot-automerge.yml  test-determine-release-modes.yml  test-export-cargo-metadata.yml  test-mutation-cargo.yml  test-mutation-mutmut.yml  test-resolve-workflow-source.yml  test-rust-build-release-root-discovery.yml  test-stage-release-artefacts.yml  test-upload-release-assets.yml
.rules/: python-00.md  python-context-managers.md  python-generators.md  python-pyproject.md  python-return.md  python-typing.md
docs/: ROADMAP.md  cmd-mox-users-guide.md  complexity-antipatterns-and-refactoring-strategies.md  composite-actions-vs-full-workflows.md  dependabot-automerge-workflow.md  developers-guide.md  falcon-correlation-id-middleware-design.md  generate-coverage-design.md  local-validation-of-github-actions-with-act-and-pytest.md  mutation-cargo-workflow.md  mutation-mutmut-workflow.md  python-action-scripts.md  python-native-command-mocking-design.md  rfc-ortho-config-env-aliases.md  rfc-ortho-config-file-layer-policy.md  roadmap.md  rust-build-release-pipeline.md  scripting-standards.md  syspath-hack-users-guide.md  users-guide.md  windows-gnullvm-build.md
docs/adr/: 0001-stable-manpage-path.md  0002-explicit-ps-module-name.md
docs/execplans/: 1-1-1-record-the-transition-boundary-scope-decision-as-an-adr.md  1-1-4-record-the-profile-rule-expression-policy.md  10-1-3-approve-actor-and-codec-driver-boundary.md  15-1-4-formal-verification-makefile-targets.md  2-2-1-default-uui-dv7-generator.md  2-4-5-extend-architecture-enforcement-to-orchestration-code.md  3-14-5-regression-coverage-for-conditional-action-dependency-manifests.md  3-2-5-expose-default-reply-templates-as-public-api.md  3-3-3-replace-shared-tui-references-with-host-neutral-references.md  4-2-2-safe-host-mounted-workspaces.md  6-1-1-docstrings-for-public-apis.md  6-2-1-write-quickstart-guide.md  add-mutation-testing-workflows.md  adopt-cargo-nextest-in-generate-coverage.md  auto-merge-on-unstable.md  binstall-metadata-audit.md  cargo-manifests-input.md  dependabot-auto-merge.md  optimization-phase-design.md  refactor-validate-packages-modules.md  support-cranelift-codegen.md
docs/tech/: benchmarking-and-optimization.md
rust-toy-app/: .goreleaser.yaml  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  dylint.toml
rust-toy-app/src/: cli.rs  lib.rs  main.rs
rust-toy-app/tests/: bdd.rs  cli.rs  cucumber.rs  manpage.rs  manpage_generation.rs  runtime.rs  rust_build_release.rs
rust-toy-app/tests/common/: mod.rs
rust-toy-app/tests/features/: cli.feature  greeting.feature
rust-toy-app/tests/test_helpers/: mod.rs
scripts/generate_coverage/: detect.py  merge_cobertura.py  run_python.py  run_rust.py  set_outputs.py
scripts/ratchet_coverage/: install_cargo_llvm_cov.py  ratchet_coverage.py  run_coverage.py
test_support/: ansi.py  cmd_mox_stub_adapter.py  plumbum_helpers.py  sandbox.py
test_support/validate_linux_packages/: __init__.py
tests/: test_bool_utils.py  test_cargo_utils.py  test_cmd_utils.py
tests/workflows/: __init__.py  conftest.py  test_action_behaviors.py  test_action_behaviours.py  test_conftest_runtime.py  test_dependabot_automerge_workflow.py  test_mutation_workflows.py  test_resolve_workflow_source.py
workflow_scripts/: __init__.py  dependabot_automerge.py  graphql_client.py  markdownlint-check.sh  mutation_detect_changes.py  mutation_run_cargo.py  mutation_run_mutmut.py  mutation_summarize_cargo.py  output.py
workflow_scripts/tests/: test_dependabot_automerge.py  test_graphql_client.py  test_mutation_detect_changes.py  test_mutation_properties.py  test_mutation_run_cargo.py  test_mutation_run_mutmut.py  test_mutation_summarize_cargo.py  test_mutation_testing_caller.py  test_mutation_workflow_shape.py
(+224 files in other folders)
