[project]
name = "shared-actions"
version = "1.2.2"
description = "Shared GitHub Actions for coverage and testing workflows"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "ISC"}
authors = [
    {name = "Payton McIntosh", email = "pmcintosh@df12.net"},
]
keywords = ["github-actions", "coverage", "testing"]
dependencies = [
    "httpx>=0.28,<0.29",
    "httpx-retries>=0.4,<0.5",
    "plumbum>=1.8,<2.0",
    "typer>=0.9,<1.0",
    "lxml>=5.2,<6.0",
    "cyclopts>=3.24,<4.0",
    "jinja2>=3.1,<4.0",
    # Pin Polythene to the requested commit for Linux package validation tooling.
    "polythene@git+https://github.com/leynos/polythene.git@44ab4bcce34279123e90c117a0597ccb66f97645",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
[dependency-groups]
dev = [
    "lxml-stubs>=0.5.1",
    "pytest>=8.0,<9.0",
    "pyyaml>=6.0,<7.0",
    "ty>=0.0.1a20",
    "uuid6>=2025.0.1",
    "cmd-mox@git+https://github.com/leynos/cmd-mox.git@baaaf89862837b8a1565fab2c18c34d498e08601",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "F",
    "W",
    "E",
    "I",
    "UP",
    "C4",
    "FA",
    "ISC",
    "ICN",
    "RET",
    "SIM",
    "TID",
    "TC",
    "PTH",
    "TD",
    "A",
    "BLE",
    "S",
    "DTZ",
    "FBT",
    "N",
    "FURB",
    "B",
    "RUF",
    "LOG",
    "Q",
    "PT",
    "RSE",
    "PERF",
    "TRY",
    "EM",
    "D",
    "ANN",
]
per-file-ignores = {"**/test_*.py" = ["S101"]}
ignore = ["D205"]

[tool.ruff.lint.flake8-import-conventions]
# Declare the banned `from` imports.
banned-from = [
    "typing",
    "datetime",
    "collections.abc",
    "dataclasses",
    "enum",
    "unittest.mock",
    "msgspec",
    "msgspec.json",
]

[tool.ruff.lint.flake8-import-conventions.aliases]
"collections.abc" = "cabc"
datetime = "dt"
"unittest.mock" = "mock"
msgspec = "ms"
"msgspec.json" = "msjson"
typing = "typ"

[tool.ruff.lint.flake8-tidy-imports.banned-api]
"subprocess.run".msg = "Use `plumbum` instead of `subprocess.run`"
"subprocess.check_call".msg = "Use `plumbum` instead of `subprocess.check_call`"
"subprocess.check_output".msg = "Use `plumbum` instead of `subprocess.check_output`"
"subprocess.check_returncode".msg = "Use `plumbum` instead of `subprocess.check_returncode`"

[tool.ruff.lint.pydocstyle]
# Enforce NumPy docstring style
convention = "numpy"

[tool.pytest.ini_options]
# Ensure asyncio fixtures create a new event loop for each test
asyncio_default_fixture_loop_scope = "function"
# Tests automatically killed after seconds elapsed
timeout = 30

[tool.setuptools]
py-modules = [
    "cmd_utils",
    "cmd_utils_importer",
]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

