[package]
name = "rust-toy-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
license = "ISC"

[dependencies]
clap = { version = "4", features = ["derive"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2.21"
time = { version = "0.3.36", features = ["formatting"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
rstest = "0.21"
glob = "0.3"
