[package]
name = "rust-toy-app"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
license = "ISC"

[features]
# Test feature for validating the rust-build-release features input
verbose = []

[dependencies]
clap = { version = "4", features = ["derive"] }

[build-dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.3.0"
time = { version = "0.3.36", features = ["formatting"] }

[dev-dependencies]
anyhow = "1"
assert_cmd = "2"
predicates = "3"
rstest = "0.26"
glob = "0.3"
tempfile = "3"

# BDD testing frameworks - used as fixtures for generate-coverage action validation
cucumber = "0.23"
futures = "0.3"

[[test]]
name = "cucumber"
harness = false
